crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_G7JE.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: G7JE
input: "a\\nb: 1\nc\n d: 1\n"
diagnostics:
YAML_LEX_REQUIRED_SIMPLE_KEY_NOT_FOUND:could not find expected ':' for required simple key@8..8
cst:
