crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_G992.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: G992
input: ">\n folded\n text\n\n\n"
diagnostics:

cst:
YAML_STREAM@0..18
  YAML_DOCUMENT@0..18
    YAML_SCALAR@0..18
      YAML_SCALAR_TEXT@0..1 ">"
      NEWLINE@1..2 "\n"
      YAML_SCALAR_TEXT@2..9 " folded"
      NEWLINE@9..10 "\n"
      YAML_SCALAR_TEXT@10..15 " text"
      NEWLINE@15..16 "\n"
      NEWLINE@16..17 "\n"
      NEWLINE@17..18 "\n"
