crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_G9HC.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: G9HC
input: "---\nseq:\n&anchor\n- a\n- b\n"
diagnostics:
YAML_LEX_REQUIRED_SIMPLE_KEY_NOT_FOUND:could not find expected ':' for required simple key@9..9
cst:
