crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_GDY7.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: GDY7
input: "key: value\nthis is #not a: key\n"
diagnostics:
YAML_LEX_REQUIRED_SIMPLE_KEY_NOT_FOUND:could not find expected ':' for required simple key@11..11
cst:
