crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_GH63.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: GH63
input: "? a\n: 1.3\nfifteen: d\n"
diagnostics:

cst:
YAML_STREAM@0..21
  YAML_DOCUMENT@0..21
    YAML_BLOCK_MAP@0..21
      YAML_BLOCK_MAP_ENTRY@0..10
        YAML_BLOCK_MAP_KEY@0..5
          YAML_KEY@0..1 "?"
          WHITESPACE@1..2 " "
          YAML_SCALAR@2..3 "a"
          NEWLINE@3..4 "\n"
          YAML_COLON@4..5 ":"
        YAML_BLOCK_MAP_VALUE@5..10
          WHITESPACE@5..6 " "
          YAML_SCALAR@6..9 "1.3"
          NEWLINE@9..10 "\n"
      YAML_BLOCK_MAP_ENTRY@10..21
        YAML_BLOCK_MAP_KEY@10..18
          YAML_SCALAR@10..17 "fifteen"
          YAML_COLON@17..18 ":"
        YAML_BLOCK_MAP_VALUE@18..21
          WHITESPACE@18..19 " "
          YAML_SCALAR@19..20 "d"
          NEWLINE@20..21 "\n"
