crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_GT5M.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: GT5M
input: "- item1\n&node\n- item2\n"
diagnostics:
YAML_LEX_REQUIRED_SIMPLE_KEY_NOT_FOUND:could not find expected ':' for required simple key@8..8
cst:
