crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_H3Z8.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 312
expression: snapshot
---
case_id: H3Z8
input: "---\nwanted: love ♥ and peace ☮\n"
diagnostics:

cst:
YAML_STREAM@0..35
  YAML_DOCUMENT@0..35
    YAML_DOCUMENT_START@0..3 "---"
    NEWLINE@3..4 "\n"
    YAML_BLOCK_MAP@4..35
      YAML_BLOCK_MAP_ENTRY@4..35
        YAML_BLOCK_MAP_KEY@4..11
          YAML_SCALAR@4..10
            YAML_SCALAR_TEXT@4..10 "wanted"
          YAML_COLON@10..11 ":"
        YAML_BLOCK_MAP_VALUE@11..35
          WHITESPACE@11..12 " "
          YAML_SCALAR@12..34
            YAML_SCALAR_TEXT@12..34 "love ♥ and peace ☮"
          NEWLINE@34..35 "\n"
