crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_H7J7.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 312
expression: snapshot
---
case_id: H7J7
input: "key: &x\n!!map\n  a: b\n"
diagnostics:
YAML_PARSE_NODE_PROPERTY_UNDERINDENTED:node property must be indented more than the parent key@8..13
cst:
