crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_H7TQ.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 283
expression: snapshot
---
case_id: H7TQ
input: "%YAML 1.2 foo\n---\n"
diagnostics:
YAML_PARSE_MALFORMED_YAML_DIRECTIVE:%YAML directive takes a single version argument@0..13
cst:
