crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_HMK4.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 312
expression: snapshot
---
case_id: HMK4
input: "name: Mark McGwire\naccomplishment: >\n  Mark set a major league\n  home run record in 1998.\nstats: |\n  65 Home Runs\n  0.278 Batting Average\n"
diagnostics:

cst:
YAML_STREAM@0..138
  YAML_DOCUMENT@0..138
    YAML_BLOCK_MAP@0..138
      YAML_BLOCK_MAP_ENTRY@0..19
        YAML_BLOCK_MAP_KEY@0..5
          YAML_SCALAR@0..4
            YAML_SCALAR_TEXT@0..4 "name"
          YAML_COLON@4..5 ":"
        YAML_BLOCK_MAP_VALUE@5..19
          WHITESPACE@5..6 " "
          YAML_SCALAR@6..18
            YAML_SCALAR_TEXT@6..18 "Mark McGwire"
          NEWLINE@18..19 "\n"
      YAML_BLOCK_MAP_ENTRY@19..90
        YAML_BLOCK_MAP_KEY@19..34
          YAML_SCALAR@19..33
            YAML_SCALAR_TEXT@19..33 "accomplishment"
          YAML_COLON@33..34 ":"
        YAML_BLOCK_MAP_VALUE@34..90
          WHITESPACE@34..35 " "
          YAML_SCALAR@35..90
            YAML_SCALAR_TEXT@35..90 ">\n  Mark set a major  ..."
      YAML_BLOCK_MAP_ENTRY@90..138
        YAML_BLOCK_MAP_KEY@90..96
          YAML_SCALAR@90..95
            YAML_SCALAR_TEXT@90..95 "stats"
          YAML_COLON@95..96 ":"
        YAML_BLOCK_MAP_VALUE@96..138
          WHITESPACE@96..97 " "
          YAML_SCALAR@97..138
            YAML_SCALAR_TEXT@97..138 "|\n  65 Home Runs\n  0. ..."
