crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_HMQ5.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 312
expression: snapshot
---
case_id: HMQ5
input: "!!str &a1 \"foo\":\n  !!str bar\n&a2 baz : *a1\n"
diagnostics:

cst:
YAML_STREAM@0..43
  YAML_DOCUMENT@0..43
    YAML_BLOCK_MAP@0..43
      YAML_BLOCK_MAP_ENTRY@0..29
        YAML_BLOCK_MAP_KEY@0..16
          YAML_TAG@0..5 "!!str"
          WHITESPACE@5..6 " "
          YAML_ANCHOR@6..9 "&a1"
          WHITESPACE@9..10 " "
          YAML_SCALAR@10..15
            YAML_SCALAR_TEXT@10..15 "\"foo\""
          YAML_COLON@15..16 ":"
        YAML_BLOCK_MAP_VALUE@16..29
          NEWLINE@16..17 "\n"
          WHITESPACE@17..19 "  "
          YAML_TAG@19..24 "!!str"
          WHITESPACE@24..25 " "
          YAML_SCALAR@25..28
            YAML_SCALAR_TEXT@25..28 "bar"
          NEWLINE@28..29 "\n"
      YAML_BLOCK_MAP_ENTRY@29..43
        YAML_BLOCK_MAP_KEY@29..38
          YAML_ANCHOR@29..32 "&a2"
          WHITESPACE@32..33 " "
          YAML_SCALAR@33..37
            YAML_SCALAR_TEXT@33..37 "baz "
          YAML_COLON@37..38 ":"
        YAML_BLOCK_MAP_VALUE@38..43
          WHITESPACE@38..39 " "
          YAML_ALIAS@39..42 "*a1"
          NEWLINE@42..43 "\n"
